responsivness and overflow issues fix

--- a/src/App.css
+++ b/src/App.css
@@ -7,28 +7,17 @@
   
 }
 html{
-  width:100%;
+  margin:0;
+  padding:0;
+  overflow-x: hidden;
 }
  body{
-  margin: 0;
-  scroll-behavior: smooth;
   background: #2D322B;
   color: #E3DFD6; 
-  margin: 0;
-  width:100%;
   overflow-x: hidden;
-  
-}
-::-webkit-scrollbar{
-  width: 0px;
-}
-
-
-.malithebrand__app-container{
-  margin: 0;
-  padding: 0;
 
 }
+
 
 a{
   color: unset;
@@ -404,30 +393,23 @@ a{
 
 
 
-
+/*
 @media screen and (max-width: 1350px ) {
-  body{
-    margin: 0;
-    scroll-behavior: smooth;
-    background: #2D322B;
-    color: #E3DFD6; 
-    margin: 0;
-    width:100%;
-    overflow-x: hidden;
-    
-  }
+    body{
+      overflow-x: hidden;
+    }
 }  
 @media screen and (max-width: 700px ) {
- 
-  body{
-    margin: 0;
-    scroll-behavior: smooth;
-    background: #2D322B;
-    color: #E3DFD6; 
-    margin: 0;
-    width:100%;
+   body{
     overflow-x: hidden;
-    
   }
+  
 
 } 
+@media screen and (max-width: 455px ) {
+  body{
+   overflow-x: hidden;
+ }
+ 
+
+} */
