--- a/src/components/brands/brands.css
+++ b/src/components/brands/brands.css
@@ -1,12 +1,11 @@
 .brands__container{
-    height: 5rem;
+   
     display:flex ;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     margin: 8rem;
-    margin-top: 4rem;
-    margin-bottom: 10em;
+   
    
     
     
