--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,12 +1,12 @@
 
 .navbar__container{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-    padding: 2rem 6rem;
+    padding: 2rem;
     font-family:FoundersGrotesk-light;
     position: relative;
-    
+   
     
 
 }
@@ -79,9 +79,9 @@ a:hover{
     }
     .navbar__container{
         display: flex;
-        justify-content: space-around;
+        justify-content: space-between;
         align-items: center;
-        padding: 2rem 6rem;
+        padding: 2rem;
         margin: 5rem;
         margin-top: 0;
         margin-bottom: 0;
@@ -100,22 +100,22 @@ a:hover{
 @media screen and (max-width: 460px){
     .navbar__container{
         display: flex;
-        justify-content: space-around;
+        justify-content: space-between;
         align-items: center;
-        padding: 2rem 6rem;
-        margin: 2rem;
-        margin-top: 0;
+        padding: 0 0;
+       
+        margin-top: 3em;
         margin-bottom: 0;
     }
 }
 @media screen and (max-width: 280px){
     .navbar__container{
         display: flex;
-        justify-content: space-around;
-        align-items: center;
-        padding: 3rem 6rem;
-       margin: 5rem;
-        margin-top: 0;
+        justify-content: space-between;
+        
+        padding: 0 0;
+     
+        margin-top: 3em;
         margin-bottom: 0;
     }
     a:hover{
