--- a/src/containers/header/header.css
+++ b/src/containers/header/header.css
@@ -16,7 +16,7 @@
   justify-content: center;
   flex-direction: column;
   width: 100%;
- 
+  align-items: center;
   
 }
 
